# dead-soals

./: CMakeLists.txt  README.md  main.cpp  run.sh  test.cpp
include/: AnimationState.h  CameraController.h  Game.h  Player.h  PlayerAnimations.h  PlayerInput.h  Renderer.h  constants.h  utils.h
src/: main.cpp  utils.cpp
src/controllers/: CameraController.cpp  Game.cpp
src/models/: Player.cpp
src/visuals/: Renderer.cpp
